# optdeps

./: .gitignore  Cargo.toml  PKGBUILD  README.md  optdeps-0.1.0-1-x86_64.pkg.tar
src/: main.rs
