[package]
name = "optdeps"
version = "0.1.0"
authors = ["Owen D'Aprile <dev@owen.sh>"]
description = "Find optional dependencies for an Arch Linux installation"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3"
ansi_term = "^0.12"
